# simplelogrotate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logrotate.cpp  logrotate.hpp  main.cpp
